Add forms handling and conditional navigation rules

--- a/jsflab/helloworld/pom.xml
+++ b/jsflab/helloworld/pom.xml
@@ -15,7 +15,7 @@
 
 	<packaging>war</packaging>
 
-	<description>An example using JSF 2.</description>
+	<description>An example using JSF 2; a simple hello world !</description>
 	
  
 	<build>
