--- a/jsflab/pom.xml
+++ b/jsflab/pom.xml
@@ -12,10 +12,17 @@
 	
 	<modules>
         	<module>helloworld</module>
+		<module>forms-handling</module>
+		<module>cond-nav-rule</module>
         </modules>
 	
 	<dependencies>
- 
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
