--- a/jsflab/pom.xml
+++ b/jsflab/pom.xml
@@ -58,6 +58,13 @@
 			<artifactId>el-ri</artifactId>
 			<version>1.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+
  
 	</dependencies>
  
