--- a/jsflab/facelets/src/main/webapp/WEB-INF/web.xml
+++ b/jsflab/facelets/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,12 @@
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
+	<!-- Load custom tag into JSF web application -->
+	<context-param>
+	   <param-name>facelets.LIBRARIES</param-name>
+	   <param-value>/WEB-INF/sfeir.taglib.xml</param-value>
+	</context-param>
  
 	<!-- Map these files with JSF -->
 	<servlet-mapping>
