--- a/jsflab/converters-and-validators/src/main/webapp/WEB-INF/web.xml
+++ b/jsflab/converters-and-validators/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
  
 	<!-- Welcome page -->
 	<welcome-file-list>
-		<welcome-file>faces/hello.xhtml</welcome-file>
+		<welcome-file>faces/default.xhtml</welcome-file>
 	</welcome-file-list>
  
 	<!-- JSF mapping -->
