--- a/jsflab/converters-and-validators/pom.xml
+++ b/jsflab/converters-and-validators/pom.xml
@@ -22,5 +22,15 @@
 		<finalName>converters-and-validators</finalName>
  
 	</build>
+	
+	<dependencies>
+		
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		
+	</dependencies>
 
 </project>
