--- a/strutslab/pom.xml
+++ b/strutslab/pom.xml
@@ -10,10 +10,23 @@
 	<description>A project containing some sample application built with Apache Struts 2 framework.</description>
 	<build>
 		<finalName>strutslab</finalName>
+		
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+		
 	</build>
 	
 	<modules>
         <module>helloworld</module>
+		<module>helloworld-annotations</module>
     </modules>
 
 	<dependencies>
